--- a/crates/aptos-profiler/Cargo.toml
+++ b/crates/aptos-profiler/Cargo.toml
@@ -2,7 +2,6 @@
 name = "aptos-profiler"
 version = "0.1.0"
 
-
 # Workspace inherited keys
 authors = { workspace = true }
 edition = { workspace = true }
@@ -16,13 +15,13 @@ rust-version = { workspace = true }
 anyhow = { workspace = true }
 
 [target.'cfg(unix)'.dependencies]
-pprof = { version = "0.11", features = ["flamegraph"]}
+pprof = { version = "0.11", features = ["flamegraph"] }
 backtrace = { version = "0.3" }
 jemallocator = { version = "0.3.2", features = [
     "profiling",
     "unprefixed_malloc_on_supported_platforms",
 ] }
-jemalloc-sys = "0.3"
+jemalloc-sys = { version = "0.3" }
 
 
 
