--- a/ecosystem/typescript/sdk_v2/package.json
+++ b/ecosystem/typescript/sdk_v2/package.json
@@ -25,7 +25,8 @@
     "_build:cjs": "tsup src/index.ts --format cjs --dts --out-dir dist/cjs",
     "_build:types": "tsup src/types/index.ts --dts --out-dir dist/types",
     "generate-openapi-response-types": "openapi -i ../../../../api/doc/spec.yaml -o ./src/types/generated --exportCore=false --exportServices=false",
-    "lint": "eslint \"**/*.ts\""
+    "lint": "eslint \"**/*.ts\"",
+    "test": "pnpm jest"
   },
   "dependencies": {
     "@aptos-labs/aptos-client": "^0.0.2",
