[ts-sdk example] Adding an example for rotation offer capability and signer offer capability with signed structs (#9425)
* Adding the offer capability example. Uses signed structs in typescript.

* remove unnecessary aptosClient from getAccount call

Co-authored-by: Maayan <maayan@aptoslabs.com>

* Fixing network URL unnecessary code and potential unalignment between network/faucet url

* Shortening # hyphens in output string

* Moving the chainId to the bottom of the struct list since it's potentially undefined, and explaining in the sign struct function that the proof bytes must be in that specific order.

* Cleaning up the code and making it more readable

* Formatting

* Use a much cleaner and reusable serializable class instead of a struct

---------

Co-authored-by: Maayan <maayan@aptoslabs.com>

--- a/ecosystem/typescript/sdk/examples/typescript-esm/package.json
+++ b/ecosystem/typescript/sdk/examples/typescript-esm/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "rm -rf dist/* && tsc -p .",
     "test": "pnpm build && node ./dist/index.js",
+    "offer_capabilities": "ts-node --esm offer_capabilities.ts",
     "rotate_key": "ts-node --esm rotate_key.ts"
   },
   "keywords": [],
