[python] add linting to examples

--- a/ecosystem/python/sdk/Makefile
+++ b/ecosystem/python/sdk/Makefile
@@ -14,7 +14,7 @@ fmt:
 	poetry run black aptos_sdk examples
 
 lint:
-	poetry run mypy aptos_sdk
+	poetry run mypy aptos_sdk examples
 	poetry run flake8 aptos_sdk examples
 
 examples:
