--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -9,6 +9,9 @@ proposals:
     execution_mode: MultiStep
     update_sequence:
       - DefaultGas
+      - FeatureFlag:
+          enabled:
+            - module_event
       - Framework:
           bytecode_version: 6
           git_hash: ~
