--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -30,3 +30,12 @@ proposals:
           transaction_shuffler_type:
             deprecated_sender_aware_v1: 32
           block_gas_limit : 35000
+  - name: enable_signature_checker_v2_fix
+    metadata:
+      title: "Enable a fix signature checker v2"
+      description: "Fixing a counting bug"
+    execution_mode: MultiStep
+    update_sequence:
+      - FeatureFlag:
+          enabled:
+            - signature_checker_v2_script_fix
