[aptos-vm] prevent existing resources from becoming resource groups (#9829)
Left out a check that would allow users to accidentally migrate existing
resources into resource group members.
It likely also let them upgrade memberless structs into resource groups.

The worst case scenario is that data would be lost equivalently to
moving data to a burn address.

* using feature flag 30
* added tests for validating consistent behavior before and after
* updated the legacy resource group disabled test to actually validate
  before behavior...

--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -12,6 +12,7 @@ proposals:
       - FeatureFlag:
           enabled:
             - module_event
+            - safer_resource_groups
       - Framework:
           bytecode_version: 6
           git_hash: ~
