--- a/.github/workflows/build-node-binaries.yaml
+++ b/.github/workflows/build-node-binaries.yaml
@@ -22,7 +22,7 @@ jobs:
     name: "Build Aptos Node Binary on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
+      - uses: actions/checkout@v3
         with:
           # ref: ${{ github.event.inputs.git_ref }}
           ref: aptos-node-v1.4.3
