--- a/.github/workflows/workflow-run-replay-verify.yaml
+++ b/.github/workflows/workflow-run-replay-verify.yaml
@@ -86,7 +86,7 @@ jobs:
     steps:
       - name: Echo Runner Number
         run: echo "Runner is ${{ matrix.number }}"
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
+      - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.GIT_SHA }}
 
