--- a/.github/workflows/workflow-run-forge.yaml
+++ b/.github/workflows/workflow-run-forge.yaml
@@ -115,7 +115,7 @@ jobs:
           # get the last 10 commits if GIT_SHA is not specified
           fetch-depth: inputs.GIT_SHA != null && 0 || 10
 
-      - uses: actions/setup-python@13ae5bb136fac2878aff31522b9efb785519f984 # pin@v4
+      - uses: actions/setup-python@v4
         if: ${{ !inputs.SKIP_JOB }}
 
       - name: Install python deps
