--- a/.github/workflows/workflow-run-forge.yaml
+++ b/.github/workflows/workflow-run-forge.yaml
@@ -153,7 +153,7 @@ jobs:
 
       - name: "Install GCloud SDK"
         if: ${{ !inputs.SKIP_JOB }}
-        uses: "google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587" # pin@v1
+        uses: "google-github-actions/setup-gcloud@v1"
         with:
           version: ">= 418.0.0"
           install_components: "kubectl,gke-gcloud-auth-plugin"
