--- a/.github/actions/docker-setup/action.yaml
+++ b/.github/actions/docker-setup/action.yaml
@@ -84,21 +84,21 @@ runs:
         export_environment_variables: ${{ inputs.EXPORT_GCP_PROJECT_VARIABLES }}
 
     - name: Login to us-west1 Google Artifact Registry
-      uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # pin@v2
+      uses: docker/login-action@v2
       with:
         registry: us-west1-docker.pkg.dev
         username: oauth2accesstoken
         password: ${{ steps.auth.outputs.access_token }}
 
     - name: Login to US multi-region Google Artifact Registry
-      uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # pin@v2
+      uses: docker/login-action@v2
       with:
         registry: us-docker.pkg.dev
         username: oauth2accesstoken
         password: ${{ steps.auth.outputs.access_token }}
 
     - name: Login to ECR
-      uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # pin@v2
+      uses: docker/login-action@v2
       with:
         registry: ${{ inputs.AWS_DOCKER_ARTIFACT_REPO }}
         username: ${{ inputs.AWS_ACCESS_KEY_ID }}
