--- a/.github/workflows/ts-sdk-e2e-tests.yaml
+++ b/.github/workflows/ts-sdk-e2e-tests.yaml
@@ -83,7 +83,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.GIT_SHA }}
-      - uses: actions/setup-node@969bd2663942d722d85b6a8626225850c2f7be4b # pin@v3
+      - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
           registry-url: "https://registry.npmjs.org"
